--- a/.gitignore
+++ b/.gitignore
@@ -169,3 +169,6 @@ cython_debug/
 *.txt
 *.out
 *.bracken
+*.pdf
+/benchmark_results_completeONE_0.7threshold/results
+/benchmark_results_complete_0.7threshold/results
