--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,20 @@ cython_debug/
 *.pdf
 /benchmark_results_completeONE_0.7threshold/results
 /benchmark_results_complete_0.7threshold/results
+*.one
+*.rep
+*.report
+*.tre
+/classify/2x2_barchart.svg
+/classify/drawBoxLineDiagramAbundance.py
+/classify/drawMaxhashes.py
+/classify/L1_Distance_Comparison_Species_Level.svg
+/classify/maxhashs.svg
+/classify/runtime_memory_comparison.svg
+/analysis.py
+/benchmark_results_marlong_complete_0.7threshold.7z
+/change.py
+/changeTime.py
+/ChimeraProfile.html
+/complete.hixf
+/completeONE.hixf
