--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,5 +3,8 @@ name = "chimera-bench"
 version = "0.1.0"
 dependencies = ["pyyaml"]
 
+[project.scripts]
+chimera-bench = "chimera_bench.cli:main"
+
 [tool.pytest.ini_options]
 addopts = "-q"
