add ganon tre metrics and sample0 dataset

--- a/configs/experiments/ganon.yaml
+++ b/configs/experiments/ganon.yaml
@@ -1,7 +1,7 @@
 name: ganon
 tool: ganon
 datasets:
-  - cami-long-0
+  - cami-long-sample0
 db: /mnt/sda/tianqinzhong/code/Chimera/third_party/ChimeraBenchmark/builds/ganon/cami_refseq/DB/ganon/cami_refseq
 threads: 64
 tool_config:
