add ganon per-read outputs and result readmes

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@ runs/
 DB/
 results/*
 !results/README.md
+!results/builds/
+!results/builds/README.md
+!results/classify/
+!results/classify/README.md
+!results/profile/
+!results/profile/README.md
+!results/reports/
+!results/reports/README.md
