add abundance truth profiles

--- a/configs/datasets/atcc-illumina.yaml
+++ b/configs/datasets/atcc-illumina.yaml
@@ -4,4 +4,4 @@ platform: illumina
 paired:
   - /mnt/sda/CommonData/TaxonomyDataset/mock/IIIumina-ATCC-MSA-1003_1.fastq
   - /mnt/sda/CommonData/TaxonomyDataset/mock/IIIumina-ATCC-MSA-1003_2.fastq
-truth: /mnt/sda/tianqinzhong/code/Chimera/bench/mock_ground_truth.md
+truth_profile: /mnt/sda/tianqinzhong/code/Chimera/third_party/ChimeraBenchmark/configs/truth/atcc_mock.tsv
