--- a/configs/datasets/zymo-gridion-even.yaml
+++ b/configs/datasets/zymo-gridion-even.yaml
@@ -4,4 +4,4 @@ platform: nanopore
 type: even
 reads:
   - /mnt/sda/CommonData/TaxonomyDataset/mock/Zymo-GridION-EVEN-BB-SN.fq
-truth: /mnt/sda/tianqinzhong/code/Chimera/bench/mock_ground_truth.md
+truth_profile: /mnt/sda/tianqinzhong/code/Chimera/third_party/ChimeraBenchmark/configs/truth/zymo_d6300.tsv
