--- a/configs/datasets/atcc-hifi.yaml
+++ b/configs/datasets/atcc-hifi.yaml
@@ -3,4 +3,4 @@ group: atcc
 platform: pacbio-hifi
 reads:
   - /mnt/sda/CommonData/TaxonomyDataset/mock/PacBioHifi-ATCC-MSA-1003.fastq
-truth: /mnt/sda/tianqinzhong/code/Chimera/bench/mock_ground_truth.md
+truth_profile: /mnt/sda/tianqinzhong/code/Chimera/third_party/ChimeraBenchmark/configs/truth/atcc_mock.tsv
