--- a/configs/experiments/sylph.yaml
+++ b/configs/experiments/sylph.yaml
@@ -1,5 +1,5 @@
-name: ganon
-tool: ganon
+name: sylph
+tool: sylph
 datasets:
   - cami2-marine-long-sample0
   - atcc-illumina
@@ -10,12 +10,11 @@ datasets:
   - zymo-gridion-log
   - zymo-promethion-even
   - zymo-promethion-log
-db: /mnt/sda/tianqinzhong/code/Chimera/third_party/ChimeraBenchmark/results/builds/ganon/cami_refseq/DB/cami_refseq
+db: /mnt/sda/tianqinzhong/code/Chimera/third_party/ChimeraBenchmark/results/builds/sylph/cami_refseq/DB/cami_refseq
 threads: 64
 coverage_target_tsv: /mnt/sda/CommonData/TaxonomyDataset/CAMIRefseq/target.tsv
 coverage_nodes_dmp: /mnt/sda/CommonData/TaxonomyDataset/CAMIRefseq/ncbi_taxonomy/nodes.dmp
 tool_config:
-  env: ganon
-  bin: ganon
-  output_all: false
+  env: sylph
+  bin: sylph
 tool_args: []
