bench: stabilize ganon2 runs

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 __pycache__/
 .pytest_cache/
 *.pyc
-*.log
-*.stdout.log
-*.stderr.log
-*.time.log
-logs/
-**/logs/
 docs/
 classify/
 profile/
@@ -14,17 +8,13 @@ builds/
 reports/
 runs/
 DB/
-results/*
+results/**
 !results/README.md
 !results/builds/
-results/builds/*
 !results/builds/README.md
 !results/classify/
-results/classify/*
 !results/classify/README.md
 !results/profile/
-results/profile/*
 !results/profile/README.md
 !results/reports/
-results/reports/*
 !results/reports/README.md
